--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Dmitry Chervinsky Portfolio</h1>
-						<p>Data Analyst proficient in Python, R, SQL, and Tableau
-						<br><a href="https://www.linkedin.com/in/dmitry-chervinsky-727044139/" target="_blank">LinkedIn</a></p>
+						<p>Data Analyst proficient in Python, R, SQL, and Tableau</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
