Update index.html - clean up links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								</header>
 								<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" class="image main" target="_blank"><img src="images/nashville.png" alt="SQL Data Cleaning" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" class="button large" target="_blank">View Project</a></li>
+									<li><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" class="button large" target="_blank">View Code</a></li>
 								</ul>
 							</article>
 
@@ -79,7 +79,7 @@
 									<a href="https://www.kaggle.com/dmitrychervinsky/film-study-analyzing-gross-revenue" target="_blank" class="image fit"><img src="images/jupyter.png" alt="Python Data Analysis" /></a>
 									<p>Looking at film revenue data to determine which factors contribute most to a film's financial success. Featuring a Jupyter notebook filled with scatter plots, regression plots, and heat maps from packages such as pandas, numpy, seaborn, and matplotlib. Hosted on Kaggle.</p>
 									<ul class="actions special">
-										<li><a href="https://www.kaggle.com/dmitrychervinsky/film-study-analyzing-gross-revenue" target="_blank" class="button">Kaggle Notebook</a></li>
+										<li><a href="https://www.kaggle.com/dmitrychervinsky/film-study-analyzing-gross-revenue" target="_blank" class="button">View Notebook</a></li>
 									</ul>
 								</article>
 								<article>
@@ -87,10 +87,10 @@
 										<h2><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank">Data Exploration (SQL)<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" class="image fit"><img src="images/covid.png" alt="SQL Data Exploration" /></a>
+									<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank" class="image fit"><img src="images/covid.png" alt="SQL Data Exploration" /></a>
 									<p>From data exploration to a complete Tableau dashboard.. Creating SQL queries (including temp tables and views) to explore Covid-19 data, followed by converting a few of these queries into Excel tables, and finally importing into Tableau to create data visualizations. </p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/views/CovidDashboard_16391491116650/Dashboard1?:language=en-US&:display_count=n&:origin=viz_share_link" class="button">End Result</a></li>
+										<li><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -101,7 +101,7 @@
 									<a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" target="_blank" class="image fit"><img src="images/bella.png" alt="R Data Analysis" /></a>
 									<p>Analying smart device usage data to identify trends that can apply to Bellabeat customers and help influence Bellabeat marketing strategy</p>
 									<ul class="actions special">
-										<li><a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" target="_blank" class="button">Case Study</a></li>
+										<li><a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" target="_blank" class="button">View Notebook</a></li>
 									</ul>
 								</article>
 							</section>
