Update index.html - alternative nashville image

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									</a></h2>
 									<p>Cleaning up Nashville housing data in Microsoft SQL Server. Tasks include: converting data types, filling in NULL values, separating columns into multiple fields, using a CASE statement to unify equal values with different spelling, and identifying and removing duplicate rows with a CTE.</p>
 								</header>
-								<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" class="image main" target="_blank"><img src="images/nashville.png" alt="SQL Data Cleaning" /></a>
+								<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" class="image main" target="_blank"><img src="images/nashville_alt.png" alt="SQL Data Cleaning" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" class="button large" target="_blank">View Code</a></li>
 								</ul>
