--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 										</a></h2>
 									</header>
 									<a href="https://www.kaggle.com/dmitrychervinsky/film-study-analyzing-gross-revenue" target="_blank" class="image fit"><img src="images/jupyter.png" alt="Python Data Analysis" /></a>
-									<p>Looking at film revenue data to determine which factors contribute most to a film's financial success. Featuring a Jupyter notebook filled with scatter plots, regression plots, and heat maps from packages such as pandas, numpy, seaborn, and matplotlib. Hosted on Kaggle.</p>
+									<p>Looking at film revenue data to determine which factors contribute most to a film's financial success. Featuring a Jupyter notebook filled with scatter plots, regression plots, and heat maps from packages such as pandas, numpy, seaborn, and matplotlib.</p>
 									<ul class="actions special">
 										<li><a href="https://www.kaggle.com/dmitrychervinsky/film-study-analyzing-gross-revenue" target="_blank" class="button">View Notebook</a></li>
 									</ul>
