Put emphasis on case study, changed visual style

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" target="_blank">Data Cleaning (SQL)<br />
+									<h2><a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" target="_blank">Bellabeat Case Study (R)<br />
 									</a></h2>
-									<p>Cleaning up Nashville housing data in Microsoft SQL Server. Tasks include: converting data types, filling in NULL values, separating columns into multiple fields, using a CASE statement to unify equal values with different spelling, and identifying and removing duplicate rows with a CTE.</p>
+									<p>Analying smart device usage data to identify trends that can apply to Bellabeat customers and help influence Bellabeat marketing strategy</p>
 								</header>
-								<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" class="image main" target="_blank"><img src="images/housing.png" alt="SQL Data Cleaning" /></a>
+								<a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" class="image main" target="_blank"><img src="images/main.png" alt="Bellabeat Case Study" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" class="button large" target="_blank">View Code</a></li>
+									<li><a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" class="button large" target="_blank">View Notebook</a></li>
 								</ul>
 							</article>
 
@@ -66,9 +66,32 @@
 										</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/dmitry.chervinsky" target="_blank" class="image fit"><img src="images/tableau.png" alt="Tableau projects" /></a>
-									<p>Topics include Covid-19, Airbnb, and World Happiness score. These dashboards showcase my ability to put together visuals in a pleasant and intuitive manner.</p>
+
+									<p>Topics include Covid-19, Airbnb, and World Happiness score. These dashboards showcase my ability to put together visuals in a pleasant and intuitive manner. Look out for interactive dashboards, storylines, revenue clusters, customer segmentation, and custom interactive tooltips.</p>
 									<ul class="actions special">
 										<li><a href="https://public.tableau.com/app/profile/dmitry.chervinsky" target="_blank" class="button">Data Visualizations</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" target="_blank">Data Cleaning (SQL)<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" target="_blank" class="image fit"><img src="images/sql.png" alt="SQL Data Cleaning" /></a>
+									<p>Cleaning up Nashville housing data in Microsoft SQL Server. Tasks include: converting data types, filling in NULL values, separating columns into multiple fields, using a CASE statement to unify equal values with different spelling, and identifying and removing duplicate rows with a CTE.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/nashville_data_cleaning.sql" target="_blank" class="button">View Code</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank">Data Exploration (SQL)<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank" class="image fit"><img src="images/data.png" alt="SQL Data Exploration" /></a>
+									<p>From data exploration to a complete Tableau dashboard.. Creating SQL queries (including temp tables and views) to explore Covid-19 data, followed by converting a few of these queries into Excel tables, and finally importing into Tableau to create data visualizations. </p>
+									<ul class="actions special">
+										<li><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
@@ -80,28 +103,6 @@
 									<p>Looking at film revenue data to determine which factors contribute most to a film's financial success. Featuring a Jupyter notebook filled with scatter plots, regression plots, and heat maps from packages such as pandas, numpy, seaborn, and matplotlib.</p>
 									<ul class="actions special">
 										<li><a href="https://www.kaggle.com/dmitrychervinsky/film-study-analyzing-gross-revenue" target="_blank" class="button">View Notebook</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank">Data Exploration (SQL)<br />
-										</a></h2>
-									</header>
-									<a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank" class="image fit"><img src="images/covid.png" alt="SQL Data Exploration" /></a>
-									<p>From data exploration to a complete Tableau dashboard.. Creating SQL queries (including temp tables and views) to explore Covid-19 data, followed by converting a few of these queries into Excel tables, and finally importing into Tableau to create data visualizations. </p>
-									<ul class="actions special">
-										<li><a href="https://github.com/chervinsky92/portfolio_projects/blob/main/covid_script.sql" target="_blank" class="button">View Code</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" target="_blank">Case Study (R)<br />
-										</a></h2>
-									</header>
-									<a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" target="_blank" class="image fit"><img src="images/bella.png" alt="R Data Analysis" /></a>
-									<p>Analying smart device usage data to identify trends that can apply to Bellabeat customers and help influence Bellabeat marketing strategy</p>
-									<ul class="actions special">
-										<li><a href="https://www.kaggle.com/dmitrychervinsky/bellabeat-case-study" target="_blank" class="button">View Notebook</a></li>
 									</ul>
 								</article>
 							</section>
