--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Dmitry Chervinsky Portfolio</h1>
-						<p>Data Analyst proficient in Python, R, SQL, and Tableau</p>
+						<p>Data Analyst proficient in Excel, SQL, Tableau, Python, and R</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -144,7 +144,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto:dmitrychervinsky1@gmail.com">dmitrychervinsky1@gmail.com</a></p>
+								<p><a href="mailto:dmitrychervinsky2@gmail.com">dmitrychervinsky1@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -158,7 +158,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Dmitry Chervinsky 2021</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Dmitry Chervinsky 2022</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
