--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Dmitry Chervinsky Portfolio</h1>
-						<p>Data Analyst proficient in Excel, SQL, Tableau, Python, and R</p>
+						<p>Data Analyst proficient in Excel, SQL, Tableau, Power BI, Python, and R</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
